crates/alder-parse/src/item/snapshots/alder_parse__item__impl___tests__error_same_line_items.snap
---
source: crates/alder-parse/src/item/impl_.rs
description: "impl Show[User] {\n    fn show(user: User) String { user.name } fn other() {}\n}\n"
---
SameLine(
    2,
    46,
)
