crates/alder-parse/src/item/snapshots/alder_parse__item__impl___tests__error_semicolon_between_items.snap
---
source: crates/alder-parse/src/item/impl_.rs
description: "impl Iterator[Foo] { type Item = Number; fn next(it: Foo) -> Option[Number] { None } }"
---
Semicolon(
    1,
    40,
)
