crates/alder-parse/src/item/snapshots/alder_parse__item__impl___tests__error_trait.snap
---
source: crates/alder-parse/src/item/impl_.rs
description: "impl show[User] {}"
---
Trait(
    1,
    6,
)
