crates/alder-parse/src/item/snapshots/alder_parse__item__impl___tests__error_trait_dangling_colons.snap
---
source: crates/alder-parse/src/item/impl_.rs
description: "impl Show::[User] {}"
---
Trait(
    1,
    12,
)
