crates/alder-parse/src/item/snapshots/alder_parse__item__impl___tests__error_trait_lower_member.snap
---
source: crates/alder-parse/src/item/impl_.rs
description: "impl Show::show[User] {}"
---
Open(
    1,
    10,
)
