crates/alder-parse/src/item/snapshots/alder_parse__item__impl___tests__error_unclosed.snap
---
source: crates/alder-parse/src/item/impl_.rs
description: "impl Show[User] {\n    fn show(user: User) -> String { user.name }\n"
---
Item(
    3,
    1,
)
