crates/alder-parse/src/item/snapshots/alder_parse__item__impl___tests__error_unclosed_empty_body.snap
---
source: crates/alder-parse/src/item/impl_.rs
description: "impl Show[User] {"
---
Item(
    1,
    18,
)
