crates/alder-parse/src/item/snapshots/alder_parse__item__impl___tests__error_where.snap
---
source: crates/alder-parse/src/item/impl_.rs
description: "impl Show[User] where a: 1 {}"
---
Where(
    Bound(
        1,
        26,
    ),
    1,
    22,
)
