crates/alder-parse/src/item/snapshots/alder_parse__item__impl___tests__impl_args_trailing_comma.snap
---
source: crates/alder-parse/src/item/impl_.rs
description: "impl Convert[Number, String,] {}"
---
ImplDecl {
    trait_: Path {
        segments: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 6,
                    },
                    end: Position {
                        line: 1,
                        column: 13,
                    },
                },
                value: "Convert",
            },
        ],
    },
    args: [
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 14,
                },
                end: Position {
                    line: 1,
                    column: 20,
                },
            },
            value: Named {
                path: Path {
                    segments: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 14,
                                },
                                end: Position {
                                    line: 1,
                                    column: 20,
                                },
                            },
                            value: "Number",
                        },
                    ],
                },
                args: [],
            },
        },
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 22,
                },
                end: Position {
                    line: 1,
                    column: 28,
                },
            },
            value: Named {
                path: Path {
                    segments: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 22,
                                },
                                end: Position {
                                    line: 1,
                                    column: 28,
                                },
                            },
                            value: "String",
                        },
                    ],
                },
                args: [],
            },
        },
    ],
    where_clause: [],
    items: [],
}
