crates/alder-parse/src/item/snapshots/alder_parse__item__impl___tests__impl_assoc_type.snap
---
source: crates/alder-parse/src/item/impl_.rs
description: "impl Iterator[Counter] {\n    type Item = Number\n    fn next(it: Counter) Option[Number] { None }\n}\n"
---
ImplDecl {
    trait_: Path {
        segments: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 6,
                    },
                    end: Position {
                        line: 1,
                        column: 14,
                    },
                },
                value: "Iterator",
            },
        ],
    },
    args: [
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 15,
                },
                end: Position {
                    line: 1,
                    column: 22,
                },
            },
            value: Named {
                path: Path {
                    segments: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 15,
                                },
                                end: Position {
                                    line: 1,
                                    column: 22,
                                },
                            },
                            value: "Counter",
                        },
                    ],
                },
                args: [],
            },
        },
    ],
    where_clause: [],
    items: [
        AssocType {
            name: Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 10,
                    },
                    end: Position {
                        line: 2,
                        column: 14,
                    },
                },
                value: "Item",
            },
            typ: Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 17,
                    },
                    end: Position {
                        line: 2,
                        column: 23,
                    },
                },
                value: Named {
                    path: Path {
                        segments: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 2,
                                        column: 17,
                                    },
                                    end: Position {
                                        line: 2,
                                        column: 23,
                                    },
                                },
                                value: "Number",
                            },
                        ],
                    },
                    args: [],
                },
            },
        },
        Fn(
            FnDecl {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 8,
                        },
                        end: Position {
                            line: 3,
                            column: 12,
                        },
                    },
                    value: "next",
                },
                params: [
                    Param {
                        pattern: Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 13,
                                },
                                end: Position {
                                    line: 3,
                                    column: 15,
                                },
                            },
                            value: Var(
                                "it",
                            ),
                        },
                        annotation: Some(
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 3,
                                        column: 17,
                                    },
                                    end: Position {
                                        line: 3,
                                        column: 24,
                                    },
                                },
                                value: Named {
                                    path: Path {
                                        segments: [
                                            Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 3,
                                                        column: 17,
                                                    },
                                                    end: Position {
                                                        line: 3,
                                                        column: 24,
                                                    },
                                                },
                                                value: "Counter",
                                            },
                                        ],
                                    },
                                    args: [],
                                },
                            },
                        ),
                    },
                ],
                ret: Some(
                    Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 26,
                            },
                            end: Position {
                                line: 3,
                                column: 40,
                            },
                        },
                        value: Named {
                            path: Path {
                                segments: [
                                    Located {
                                        region: Region {
                                            start: Position {
                                                line: 3,
                                                column: 26,
                                            },
                                            end: Position {
                                                line: 3,
                                                column: 32,
                                            },
                                        },
                                        value: "Option",
                                    },
                                ],
                            },
                            args: [
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 3,
                                            column: 33,
                                        },
                                        end: Position {
                                            line: 3,
                                            column: 39,
                                        },
                                    },
                                    value: Named {
                                        path: Path {
                                            segments: [
                                                Located {
                                                    region: Region {
                                                        start: Position {
                                                            line: 3,
                                                            column: 33,
                                                        },
                                                        end: Position {
                                                            line: 3,
                                                            column: 39,
                                                        },
                                                    },
                                                    value: "Number",
                                                },
                                            ],
                                        },
                                        args: [],
                                    },
                                },
                            ],
                        },
                    },
                ),
                where_clause: [],
                body: Some(
                    Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 41,
                            },
                            end: Position {
                                line: 3,
                                column: 49,
                            },
                        },
                        value: Block {
                            stmts: [],
                            tail: Some(
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 3,
                                            column: 43,
                                        },
                                        end: Position {
                                            line: 3,
                                            column: 47,
                                        },
                                    },
                                    value: Path(
                                        Path {
                                            segments: [
                                                Located {
                                                    region: Region {
                                                        start: Position {
                                                            line: 3,
                                                            column: 43,
                                                        },
                                                        end: Position {
                                                            line: 3,
                                                            column: 47,
                                                        },
                                                    },
                                                    value: "None",
                                                },
                                            ],
                                        },
                                    ),
                                },
                            ),
                        },
                    },
                ),
            },
        ),
    ],
}
