crates/alder-parse/src/item/snapshots/alder_parse__item__impl___tests__impl_bodiless_fn.snap
---
source: crates/alder-parse/src/item/impl_.rs
description: "impl Show[User] {\n    fn show(user: User) String\n}\n"
---
ImplDecl {
    trait_: Path {
        segments: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 6,
                    },
                    end: Position {
                        line: 1,
                        column: 10,
                    },
                },
                value: "Show",
            },
        ],
    },
    args: [
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 11,
                },
                end: Position {
                    line: 1,
                    column: 15,
                },
            },
            value: Named {
                path: Path {
                    segments: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 11,
                                },
                                end: Position {
                                    line: 1,
                                    column: 15,
                                },
                            },
                            value: "User",
                        },
                    ],
                },
                args: [],
            },
        },
    ],
    where_clause: [],
    items: [
        Fn(
            FnDecl {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 2,
                            column: 8,
                        },
                        end: Position {
                            line: 2,
                            column: 12,
                        },
                    },
                    value: "show",
                },
                params: [
                    Param {
                        pattern: Located {
                            region: Region {
                                start: Position {
                                    line: 2,
                                    column: 13,
                                },
                                end: Position {
                                    line: 2,
                                    column: 17,
                                },
                            },
                            value: Var(
                                "user",
                            ),
                        },
                        annotation: Some(
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 2,
                                        column: 19,
                                    },
                                    end: Position {
                                        line: 2,
                                        column: 23,
                                    },
                                },
                                value: Named {
                                    path: Path {
                                        segments: [
                                            Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 2,
                                                        column: 19,
                                                    },
                                                    end: Position {
                                                        line: 2,
                                                        column: 23,
                                                    },
                                                },
                                                value: "User",
                                            },
                                        ],
                                    },
                                    args: [],
                                },
                            },
                        ),
                    },
                ],
                ret: Some(
                    Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 25,
                            },
                            end: Position {
                                line: 2,
                                column: 31,
                            },
                        },
                        value: Named {
                            path: Path {
                                segments: [
                                    Located {
                                        region: Region {
                                            start: Position {
                                                line: 2,
                                                column: 25,
                                            },
                                            end: Position {
                                                line: 2,
                                                column: 31,
                                            },
                                        },
                                        value: "String",
                                    },
                                ],
                            },
                            args: [],
                        },
                    },
                ),
                where_clause: [],
                body: None,
            },
        ),
    ],
}
